# tezos

./: .bazelrc  .gitignore  .obazlrc  BUILD.bazel  Dockerfile.buildbuddy  OBAZL.md  WORKSPACE.bazel  WORKSPACE.bzl  flake.nix  generate
.opam/: opam_repos.bzl
.opam.d/: opam_repos.bzl  opam_resolver_raw.scm
.opam.d/buildfiles/alcotest/: BUILD.bazel
.opam.d/buildfiles/alcotest-lwt/: BUILD.bazel
.opam.d/buildfiles/angstrom/: BUILD.bazel
.opam.d/buildfiles/astring/: BUILD.bazel
.opam.d/buildfiles/base64/: BUILD.bazel
.opam.d/buildfiles/base_quickcheck/: BUILD.bazel
.opam.d/buildfiles/bigarray-compat/: BUILD.bazel
.opam.d/buildfiles/bigstring/: BUILD.bazel
.opam.d/buildfiles/bigstringaf/: BUILD.bazel
.opam.d/buildfiles/bls12-381/: BUILD.bazel
.opam.d/buildfiles/bls12-381-unix/: BUILD.bazel
.opam.d/buildfiles/bos/: BUILD.bazel
.opam.d/buildfiles/ca-certs/: BUILD.bazel
.opam.d/buildfiles/cmdliner/: BUILD.bazel
.opam.d/buildfiles/codept/: BUILD.bazel
.opam.d/buildfiles/cohttp/: BUILD.bazel
.opam.d/buildfiles/conduit-lwt/: BUILD.bazel
.opam.d/buildfiles/conduit-lwt-unix/: BUILD.bazel
.opam.d/buildfiles/core/: BUILD.bazel
.opam.d/buildfiles/cpuid/: BUILD.bazel
.opam.d/buildfiles/csexp/: BUILD.bazel
.opam.d/buildfiles/cstruct/: BUILD.bazel
.opam.d/buildfiles/cstruct-lwt/: BUILD.bazel
.opam.d/buildfiles/ctypes/: BUILD.bazel
.opam.d/buildfiles/cudf/: BUILD.bazel
.opam.d/buildfiles/data-encoding/: BUILD.bazel
.opam.d/buildfiles/digestif/: BUILD.bazel
.opam.d/buildfiles/dose3/: BUILD.bazel
.opam.d/buildfiles/dum/: BUILD.bazel
.opam.d/buildfiles/duration/: BUILD.bazel
.opam.d/buildfiles/eqaf/: BUILD.bazel
.opam.d/buildfiles/extlib/: BUILD.bazel
.opam.d/buildfiles/ezjsonm/: BUILD.bazel
.opam.d/buildfiles/fmt/: BUILD.bazel
.opam.d/buildfiles/fpath/: BUILD.bazel
.opam.d/buildfiles/genspio/: BUILD.bazel
bzl/: NOTES.md  deps.bzl  library.bzl  macos.bazelrc  opam.bzl  opam.export  tezos-rust-libs.BUILD
docs/developer/: BUILD.bazel
dsl/: BUILD.bazel
src/bin_attacker/: BUILD.bazel
src/bin_client/: BUILD.bazel
src/bin_codec/: BUILD.bazel
src/bin_node/: BUILD.bazel
src/bin_proxy_server/: BUILD.bazel
src/bin_sandbox/: BUILD.bazel
src/bin_signer/: BUILD.bazel
src/bin_snoop/: BUILD.bazel
src/bin_snoop/latex/: BUILD.bazel
src/bin_snoop/latex/lib/: BUILD.bazel
src/bin_snoop/latex/test/: BUILD.bazel
src/bin_validation/: BUILD.bazel
src/lib_base/: BUILD.bazel  point_parser.mlX
src/lib_base/test/: BUILD.bazel
src/lib_base/unix/: BUILD.bazel  dune
src/lib_benchmark/: BUILD.bazel
src/lib_benchmark/example/: BUILD.bazel
src/lib_benchmark/lib_micheline_rewriting/: BUILD.bazel
src/lib_benchmark/lib_micheline_rewriting/test/: BUILD.bazel
src/lib_benchmark/test/: BUILD.bazel
src/lib_clic/: BUILD.bazel
src/lib_clic/unix/: BUILD.bazel
src/lib_client_base/: BUILD.bazel
src/lib_client_base/test/: BUILD.bazel
src/lib_client_base_unix/: BUILD.bazel  client_main_run.ml  client_main_run.mli
src/lib_client_base_unix/test/: BUILD.bazel
src/lib_client_commands/: BUILD.bazel
src/lib_context/: BUILD.bazel
src/lib_context/encoding/: BUILD.bazel
src/lib_context/helpers/: BUILD.bazel
src/lib_context/memory/: BUILD.bazel
src/lib_context/sigs/: BUILD.bazel
src/lib_context/test/: BUILD.bazel
src/lib_crypto/: BUILD.bazel  BUILD.obazl  tezos-crypto.opam
src/lib_crypto/test/: BUILD.bazel  dune
src/lib_error_monad/: BUILD.bazel
src/lib_error_monad/test/: BUILD.bazel
src/lib_event_logging/: BUILD.bazel
src/lib_hacl_glue/: BUILD.bazel  dune  tezos-hacl-glue.opam
src/lib_hacl_glue/js/src/: BUILD.bazel
src/lib_hacl_glue/js/test/: BUILD.bazel
src/lib_hacl_glue/unix/: BUILD.bazel
src/lib_hacl_glue/virtual/: BUILD.bazel
src/lib_lwt_result_stdlib/: BUILD.bazel
src/lib_lwt_result_stdlib/bare/functor_outputs/: BUILD.bazel  BUILD.obazl
src/lib_lwt_result_stdlib/bare/sigs/: BUILD.bazel
src/lib_lwt_result_stdlib/bare/structs/: BUILD.bazel
src/lib_lwt_result_stdlib/examples/traces/: BUILD.bazel
src/lib_lwt_result_stdlib/test/: BUILD.bazel
src/lib_lwt_result_stdlib/traced/functor_outputs/: BUILD.bazel
src/lib_lwt_result_stdlib/traced/sigs/: BUILD.bazel
src/lib_lwt_result_stdlib/traced/structs/: BUILD.bazel
src/lib_micheline/: BUILD.bazel
src/lib_micheline/test/: BUILD.bazel
src/lib_mockup/: BUILD.bazel  mockup_wallet.ml  mockup_wallet.mli  persistence.ml  persistence_intf.ml
src/lib_mockup/test/: BUILD.bazel
src/lib_mockup_proxy/: BUILD.bazel
src/lib_p2p/: BUILD.bazel
src/lib_p2p/test/: BUILD.bazel
src/lib_p2p_services/: BUILD.bazel
src/lib_protocol_compiler/: BUILD.bazel  BUILD.obazl
src/lib_protocol_compiler/test/: BUILD.bazel
src/lib_protocol_environment/: BUILD.bazel  dune  environment_V0.ml
src/lib_protocol_environment/s_packer/: BUILD.bazel  pack.bzl
src/lib_protocol_environment/sigs/: BUILD.bazel  BUILD.obazl  extract_sig.bzl  srcs.bzl  v0.dune.inc  v1.dune.inc  v2.dune.inc  v3.dune.inc
src/lib_protocol_environment/structs/: BUILD.bazel  srcs.bzl  v0.dune.inc  v1.dune.inc  v2.dune.inc  v3.dune.inc
src/lib_protocol_environment/test/: BUILD.bazel
src/lib_protocol_updater/: BUILD.bazel
src/lib_proxy/: BUILD.bazel
src/lib_proxy_server_config/: BUILD.bazel
src/lib_requester/: BUILD.bazel
src/lib_rpc/: BUILD.bazel
src/lib_rpc_http/: BUILD.bazel
src/lib_sapling/: BUILD.bazel  BUILD.bazelX  BUILD.obazl
src/lib_shell/: BUILD.bazel
src/lib_shell_benchmarks/: BUILD.bazel
src/lib_shell_services/: BUILD.bazel
src/lib_signer_backends/: BUILD.bazel
src/lib_signer_services/: BUILD.bazel
src/lib_stdlib/: BUILD.bazel  BUILD.obazl
src/lib_stdlib_unix/: BUILD.bazel
src/lib_store/: BUILD.bazel
src/lib_test/: BUILD.bazel
src/lib_test_services/: BUILD.bazel
src/lib_validation/: BUILD.bazel
src/lib_version/: BUILD.bazel  generated_git_info.ml
src/lib_workers/: BUILD.bazel
src/openapi/: BUILD.bazel
src/tooling/: BUILD.bazel
vendors/benchmark-utils/: BUILD.bazel
vendors/flextesa-lib/: BUILD.bazel
(+610 files in other folders)
