load("@okapi//bzl:generate.bzl", "generate")

generate()

# gazelle:exclude bazel
# gazelle:exclude scripts
# gazelle:exclude src/lib_protocol_environment/structs
# gazelle:exclude src/lib_protocol_environment/sigs
# gazelle:exclude src/proto_0*
# gazelle:exclude vendors
# gazelle:exclude tezt
# gazelle:exclude docs
