workspace(name = "tezos")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

http_archive(
    name = "io_buildbuddy_buildbuddy_toolchain",
    sha256 = "a2a5cccec251211e2221b1587af2ce43c36d32a42f5d881737db3b546a536510",
    strip_prefix = "buildbuddy-toolchain-829c8a574f706de5c96c54ca310f139f4acda7dd",
    url = "https://github.com/buildbuddy-io/buildbuddy-toolchain/archive/829c8a574f706de5c96c54ca310f139f4acda7dd.tar.gz",
)
load("@io_buildbuddy_buildbuddy_toolchain//:deps.bzl", "buildbuddy_deps")
buildbuddy_deps()
load("@io_buildbuddy_buildbuddy_toolchain//:rules.bzl", "buildbuddy")
buildbuddy(name = "buildbuddy_toolchain")

http_archive(
    name = "okapi",
    sha256 = "ade3d128577ccfd9bebe099611442f0098403e908830011686896bc01db492b7",
    strip_prefix = "okapi-4c521109008ff697a35d5969334b3ce01408362d",
    url = "https://github.com/tweag/okapi/archive/4c521109008ff697a35d5969334b3ce01408362d.tar.gz",
)

load("@okapi//bzl:deps.bzl", "okapi_deps")
okapi_deps()

load("@okapi//bzl:setup.bzl", "okapi_setup")
okapi_setup(
    nix_support = False
)

load("//:WORKSPACE.bzl", "obazl_deps")
obazl_deps()

load("@obazl_tools_opam//opam:rules.bzl",
     "new_local_opam_repository")

load("@obazl_rules_ocaml//ocaml:bootstrap.bzl", "ocaml_configure")
ocaml_configure(switch = "4.10")

####################
new_local_opam_repository(
    name = "tezos-rust-libs",
    package  = "tezos-rust-libs",
    build_file_content = """
cc_import(
    name = "librustzcash",
    hdrs = ["librustzcash.h"],
    static_library = "librustzcash.a",
    alwayslink = 1,
    visibility = ["//visibility:public"],
)
""")
