load("@obazl_rules_ocaml//ocaml:rules.bzl", "ocaml_module", "ocaml_ns_archive", "ocaml_signature")

ocaml_module(
    name = "attacker_main",
    struct = ":attacker_main.ml",
    deps = [":attacker_minimal"],
)

ocaml_signature(
    name = "attacker_minimal__sig",
    src = ":attacker_minimal.mli",
)

ocaml_module(
    name = "attacker_minimal",
    sig = ":attacker_minimal__sig",
    struct = ":attacker_minimal.ml",
)

# okapi:auto
# okapi:public_name bin_attacker
ocaml_ns_archive(
    name = "#Bin_attacker",
    submodules = [
        ":attacker_main",
        ":attacker_minimal",
    ],
    visibility = ["//visibility:public"],
)
